update: add dev.Dockerfile for windows environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   app:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ./docker/
+      dockerfile: dev.Dockerfile
     environment:
       DB_HOST: ${DB_HOST}
       DB_DATABASE: ${DB_DATABASE}
@@ -16,6 +16,10 @@ services:
     ports:
       - 9090:9090
     restart: on-failure
+    volumes:
+      - .:/app
+    networks:
+      - hewpao-network
     depends_on:
       db:
         condition: service_healthy
