update: env example requirements

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ DB_PORT="5432"
 JWT_SECRET="" # https://jwtsecret.com/generate
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+FILE_UPLOAD_SIZE_LIMIT_MB=500
+S3_BUCKET_NAME="bucket-name"
+S3_ENDPOINT="domain-name"
+S3_ACCESS_KEY_ID="access-key"
+S3_SECRET_ACCESS_KEY="key"
