--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ S3_ACCESS_KEY_ID="access-key"
 S3_SECRET_ACCESS_KEY="key"
 STRIPE_SECRET_KEY=""
 STRIPE_WEBHOOK_SECRET=""
+EMAIL_SERVER="smtp.gmail.com"
+EMAIL_PORT="465"
+EMAIL_USER=""
+EMAIL_PASSWORD=""
